# ebi02201

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/EBI02201.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ebi02201/: 0.html  00_falcon_dnarganes.html  00_falcon_dnarganes.ipynb  1.html  2.html  3.html  4.html  5.html  6.html  Cell Line_f1.html  Cell_f1.html  Organ Tissue_f1.html  check_missing_annotations.py  data_collection.py  data_preprocessing.py  gridsearch.py  init.sh  microglia.html  myModel.py  plotting.py  student-distill.py  train.py  utils.py
src/runs/: hparam_tuning_mlflow.csv
tests/: test_example.py
