[metadata]
name = EBI02201
description = Machine Learning EMBL-EBI
long_description = file: README.md
long_description_content_type = text/markdown
author = DNarganes
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >= 3.10
include_package_data = True
install_requires =
    loguru

[options.packages.find]
where = src
